@@ -1,3 +1,8 @@
+Thu Dec 31 14:36:45 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/ostruct.rb: Fix new_ostruct_member to correctly avoid
+	  redefinition [#11901]
+
 Thu Dec 31 02:45:12 2015  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* test/ruby/test_module.rb (test_classpath): r53376 may change
